--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.19",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
+    "json-server": "^0.14.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -16,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "backend": "json-server --port 3001 --watch data.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -26,5 +28,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:3001"
 }
