--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "@types/jest": "23.3.13",
     "@types/node": "10.12.19",
-    "@types/react": "16.7.22",
-    "@types/react-dom": "16.0.11",
+    "@types/react": "^16.8.7",
+    "@types/react-dom": "^16.8.2",
     "json-server": "^0.14.2",
-    "react": "^16.7.0",
-    "react-dom": "^16.7.0",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-scripts": "2.1.3",
     "typescript": "3.2.4"
   },
