--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "json-server": "^0.14.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.3",
     "react-scripts": "^3.0.0",
+    "redux": "^4.0.1",
     "typescript": "^3.4.5"
   },
   "scripts": {
@@ -29,5 +31,8 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "proxy": "http://localhost:3001"
+  "proxy": "http://localhost:3001",
+  "devDependencies": {
+    "@types/react-redux": "^7.0.8"
+  }
 }
