--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "@types/node": "^11.13.8",
     "@types/react": "^16.8.15",
     "@types/react-dom": "^16.8.4",
+    "immutability-helper": "^3.0.0",
     "json-server": "^0.14.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
     "react-scripts": "^3.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-observable": "^1.1.0",
+    "rxjs": "^6.5.1",
+    "typesafe-actions": "^4.2.0",
     "typescript": "^3.4.5"
   },
   "scripts": {
@@ -33,6 +38,7 @@
   ],
   "proxy": "http://localhost:3001",
   "devDependencies": {
-    "@types/react-redux": "^7.0.8"
+    "@types/react-redux": "^7.0.8",
+    "@types/redux-devtools-extension": "^2.13.2"
   }
 }
